--- a/.github/workflows/set_variable.yml
+++ b/.github/workflows/set_variable.yml
@@ -21,7 +21,7 @@ on:
         required: true
       pkgname:
         description: 'Openwrt package name'  
-        default: "openclash"
+        default: "luci-app-openclash"
         required: true
       email:
         description: 'Git accuont email address'  
@@ -31,7 +31,7 @@ on:
         required: false
         
 jobs:
-  setpackage:
+  build_package:
     runs-on: ubuntu-20.04
     steps:
     - name: Checkout
