--- a/.github/workflows/set_variable.yml
+++ b/.github/workflows/set_variable.yml
@@ -50,7 +50,7 @@ jobs:
         chmod +x ./build.sh
         ./build.sh
 
-    - uses: actions/upload-artifact@v2
+    - uses: actions/upload-artifact@main
       with:
         name: ${{ github.event.inputs.pkgname }}_related_ipks
         path: |
