--- a/.github/workflows/set_variable.yml
+++ b/.github/workflows/set_variable.yml
@@ -54,4 +54,6 @@ jobs:
       with:
         name: ${{ github.event.inputs.pkgname }}_related_ipks
         path: |
-          ./*${{ github.event.inputs.pkgname }}*ipk*
+          ./*ipk*
+
+    #${{ github.event.inputs.pkgname }}*
