--- a/.github/workflows/set_variable.yml
+++ b/.github/workflows/set_variable.yml
@@ -17,11 +17,11 @@ on:
         - SFT1200
       sourcecode:
         description: 'Source code URL'     
-        default: "https://github.com/vernesong/OpenClash.git"
+        default: "https://github.com/sbwml/luci-app-alist.git"
         required: true
       pkgname:
         description: 'Openwrt package name'  
-        default: "luci-app-openclash"
+        default: "luci-app-alist"
         required: true
       email:
         description: 'Git accuont email address'  
