--- a/.github/workflows/set_variable.yml
+++ b/.github/workflows/set_variable.yml
@@ -59,4 +59,13 @@ jobs:
         path: |
           ./*ipk*
 
+      - name: Delete workflow runs
+        uses: Mattraks/delete-workflow-runs@v2
+        with:
+          token: ${{ github.token }}
+          repository: ${{ github.repository }}
+          retain_days: 30
+          keep_minimum_runs: 6
+
+          
     #${{ github.event.inputs.pkgname }}*
